# simplelogger

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build.yml
include/: logger.hpp
src/: logger.cpp  main.cpp
